# SpectraGraph

./: .dockerignore  .env.example  .gitignore  .versionrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  ETHICS.md  LICENSE  Makefile  README.md  SECURITY.md  commitlint.config.js  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test_github_api.py  test_manual.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: HACKATHON_BOOTSTRAP.md  TROUBLESHOOTING.md
docs/landing/: index.html
docs/transforms/: github_repo.md
flowsint-api/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
flowsint-api/alembic/: env.py
flowsint-api/app/: main.py
flowsint-app/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
flowsint-app/src/: routeTree.gen.ts  use-debounce.ts
flowsint-core/: Dockerfile  README.md  pyproject.toml
flowsint-core/src/flowsint_core/core/: auth.py  celery.py  graph_db.py  graph_serializer.py  logger.py  models.py  postgre_db.py  registry.py  transform_base.py  types.py
flowsint-core/src/flowsint_core/imports/: entity_detection.py  type_matcher.py
flowsint-core/src/flowsint_core/tasks/: event.py  flow.py  transform.py
flowsint-core/tests/: __init__.py  conftest.py
flowsint-core/tests/import/: test_entity_detection.py  test_import_integration.py
flowsint-core/tests/vault/: test_transform_vault_integration.py  test_vault.py
flowsint-transforms/: README.md  pyproject.toml
flowsint-transforms/src/flowsint_transforms/: __init__.py
flowsint-transforms/src/flowsint_transforms/asn/: to_cidrs.py
flowsint-transforms/src/flowsint_transforms/cidr/: to_ips.py
flowsint-transforms/src/flowsint_transforms/crypto/: to_nfts.py  to_transactions.py
flowsint-transforms/src/flowsint_transforms/domain/: to_asn.py  to_history.py  to_ip.py  to_root_domain.py  to_subdomains.py  to_website.py  to_whois.py
flowsint-transforms/src/flowsint_transforms/email/: to_domains.py  to_gravatar.py  to_leaks.py
flowsint-transforms/src/flowsint_transforms/individual/: to_domains.py  to_org.py
flowsint-transforms/src/flowsint_transforms/ip/: to_asn.py  to_domain.py  to_infos.py
flowsint-transforms/src/flowsint_transforms/leak/: to_leaks.py
flowsint-transforms/src/flowsint_transforms/n8n/: connector.py
flowsint-transforms/src/flowsint_transforms/organization/: to_asn.py  to_domains.py  to_infos.py
flowsint-transforms/src/flowsint_transforms/phone/: to_infos.py  to_leaks.py
flowsint-transforms/src/flowsint_transforms/social/: to_maigret.py  to_sherlock.py
flowsint-transforms/src/flowsint_transforms/website/: to_crawler.py  to_domain.py  to_links.py  to_text.py  to_webtrackers.py
flowsint-transforms/src/tools/: __init__.py
flowsint-transforms/src/tools/network/: dnsx.py  mapcidr.py  subfinder.py
flowsint-transforms/src/tools/organizations/: sirene.py
flowsint-transforms/tests/: README.md  conftest.py  insert_command.py  test_vault_integration.py
flowsint-transforms/tests/tools/network/: reconcrawl.py  whoxy.py
flowsint-transforms/tests/transforms/crypto/: wallet_to_nfts.py  wallet_to_transactions.py
flowsint-transforms/tests/transforms/domain/: resolve.py  subdomains.py  to_history.py  whois.py
flowsint-transforms/tests/transforms/email/: to_gravatar.py  to_leaks.py
flowsint-transforms/tests/transforms/ip/: asn_to_cidrs.py  cidr_to_ips.py  ip_to_asn.py  ip_to_infos.py
flowsint-transforms/tests/transforms/organization/: to_infos.py
flowsint-transforms/tests/transforms/social/: maigret.py
flowsint-transforms/tests/transforms/website/: to_links.py
flowsint-types/: README.md  pyproject.toml
flowsint-types/src/: pyproject.toml
flowsint-types/src/flowsint_types/: affiliation.py  asn.py  credit_card.py  document.py  domain.py  email.py  file.py  individual.py  ip.py  leak.py  malware.py  phone.py  reputation_score.py  risk_profile.py  session.py  username.py  website.py
scripts/: pyproject-updater.js  sync-versions.js
spectragraph-api/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  resume.cfg
spectragraph-api/alembic/: env.py
spectragraph-api/alembic/versions/: 1d0f26dbbef5_add_passive_delete_v2.py  2da47dbd4a52_add_cascade_delete_to_scans_and_logs.py  661ff8ef4425_rename_transforms_to_flows.py  6dfa83113ad7_change_content_colum_of_log_to_json.py  6e49acfb3816_add_investigation_roles_permissions.py  76f5436251e3_add_relationship_between_investigations_.py  8173aba964e7_add_custom_types_table.py  8ac522441108_add_chat_and_chat_message.py  8d0e12b68d1e_fix_backpopulate_issue.py  c82bf6af92e5_add_investigation_roles_permissions.py  d0a8e5b5a7b9_add_relationship_between_investigations_.py  e403a4152f6b_add_third_party_keys_table.py  fa0ab51b2f64_add_analysis_model_and_investigation_.py
spectragraph-api/app/: exceptions.py  logging_config.py  main.py  utils.py
spectragraph-api/app/api/: deps.py  sketch_utils.py
spectragraph-api/app/api/routes/: analysis.py  auth.py  chat.py  custom_types.py  events.py  flows.py  investigations.py  keys.py  scan.py  sketches.py  transforms.py  types.py
spectragraph-api/app/api/schemas/: analysis.py  feedback.py  flow.py  investigation.py  profile.py  sketch.py  transform.py
spectragraph-api/app/security/: permissions.py
spectragraph-api/app/utils/: __init__.py
spectragraph-app/: README.md  components.json  index.html  nginx.conf  package.json
spectragraph-app/src/: env.d.ts  main.tsx  styles.css
spectragraph-core/: README.md  pyproject.toml
spectragraph-core/tests/: __init__.py  conftest.py  test_postgre_db.py
spectragraph-transforms/: README.md  pyproject.toml
spectragraph-transforms/tests/: README.md  conftest.py  insert_command.py  logger.py  test_github_repo.py  test_vault_integration.py
spectragraph-types/: README.md  pyproject.toml
spectragraph-types/src/: pyproject.toml
virtual/: pyvenv.cfg
virtual/Scripts/: activate  activate.bat  fitz  get_gprof  jp.py  (+5 more)
(+383 files in other folders)
