[tool.poetry]
name = "flowsint-types"
version = "0.1.0"
description = "Pydantic models for flowsint"
authors = ["sr-857 <sr-857@users.noreply.github.com>"]
packages = [{ include = "flowsint_types" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
